--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.DriverClass=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://192.168.1.107:3306/bbs?characterEncoding=utf-8
-jdbc.username=xfxi
-jdbc.password=Xf19960125!
+jdbc.username=xxx
+jdbc.password=xxx
